FIX MATH BUG!!!:D

--- a/frontend/unbiased.html
+++ b/frontend/unbiased.html
@@ -76,11 +76,13 @@
                     <input type="checkbox" id="female" name="Female" value="Female">
                     <label for="female">Female</label><br>
                     <input type="checkbox" id="overtime" name="OverTime" value="OverTime">
-                    <label for="overtime">Overtime</label><br>
+                    <label for="overtime">Overtime Work</label><br>
                     <input type="checkbox" id="job-safistaction" name="JobSatisfaction" value="JobSatisfaction">
                     <label for="job-satisfaction">Job Satisfaction</label><br>
                     <input type="checkbox" id="income" name="MonthlyIncome" value="MonthlyIncome">
                     <label for="income">Monthly Income</label><br>
+                    <input type="checkbox" id="attrition" name="Attrition" value="Attrition">
+                    <label for="attrition">Attrition</label><br>
 
                     <button type="button" id="submitButton" class="button-solid">Submit Inputs</button>
             
