rearrange / frontend stuff

--- a/biased.html
+++ b/biased.html
@@ -25,9 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="biased.html">Biased Example</a>
                         </li>
-                        <li class="nav-item">
+                        <!--<li class="nav-item">
                             <a class="nav-link" href="generate.html">Generate Dataset</a>
-                        </li>
+                        </li>-->
                         <li class="nav-item">
                             <a class="nav-link" href="extra.html">Extra Info</a>
                         </li>
@@ -36,10 +36,4 @@
             </div>
         </div> 
         
-        <div class="home-text">
-            <h1>Keeping Bias at Bay(es):</h1>
-            <h2>A Naive Bayes Exploration on<br>Retaining Diverse Talent in the Tech Industry</h2>
-            <p>Katherine Wong, '25<br>CS109 Probability Challenge Project</p>
-        </div>
     </body>
-</html>
