--- a/extra.html
+++ b/extra.html
@@ -25,9 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="biased.html">Biased Example</a>
                         </li>
-                        <li class="nav-item">
+                        <!--<li class="nav-item">
                             <a class="nav-link" href="generate.html">Generate Dataset</a>
-                        </li>
+                        </li>-->
                         <li class="nav-item">
                             <a class="nav-link" href="extra.html">Extra Info</a>
                         </li>
