--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 algorithm runs with these inputs and outputs the final probability for the user to view. <br>
                                 <br>
                                 Since company HR datasets are often not published to the general public, we see this tool being internally used by tech companies to evaluate 
-                                whether there exists a diversity talent retention issue at said company. If so, this tool can also help detect what factors they can consider 
+                                whether there exists a diversity talent retention issue at said company. This tool can also help detect what factors a company needs to consider 
                                 in order to address the problem. <br>
                                 <br>
                             </p>
@@ -107,11 +107,27 @@
                                     <li><i><u>About Project:</u></i> You're here! Learn more about <i>Keeping Bias at Bay(es)</i> and the motivation behind creating the project.</li>
                                     <li><i><u>Unbiased Example:</u></i> Test the tool on a company dataset that showcases less bias against female employees.</li>
                                     <li><i><u>Biased Example:</u></i> Test the tool on a company dataset that showcases greater bias against female employees.</li>
-                                    <li><i><u>Generate Example:</u></i> Design your own dataset and test the tool on it!</li>
+                                    <!--<li><i><u>Generate Example:</u></i> Design your own dataset and test the tool on it!</li>-->
                                     <li><i><u>Extra Info:</u></i> Take a look at the project's report and GitHub repository for more detailed information on implementation.</li>
                                 </ul>
                                 <br>
                             </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="descriptionBox">
+            <div id="proj-desc">
+                <div class="container">
+                    <div class="row">
+                        <!-- text -->
+                        <div class="proj-desc">
+                            <h1 class="sub-title">How do I interpret the results?</h1>
+                            <p class="about-description"> 
+                                pee pee poo poo <br>
+                                <br>
                         </div>
                     </div>
                 </div>
