--- a/biased.html
+++ b/biased.html
@@ -38,7 +38,7 @@
 
         <!-- Unbiased Title -->
         <div class="unbiased-text">
-            <h2>Let's train our Naive Bayes<br>model on a more-biased company.</h2>
+            <h2>Let's train our Naive Bayes<br>model on a company HR dataset that is<br>more biased towards female employees.</h2>
             <h3>Choose your inputs:</h3>
         </div>
 
