--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                                 the user can input what they want to get the probability of, along with what factors they want to condition on. Finally, the Naive Bayes
                                 algorithm runs with these inputs and outputs the final probability for the user to view. <br>
                                 <br>
-                                Since company HR datasets are often not published to the general public, we see this tool being internally used by tech companies to evaluate 
-                                whether there exists a diversity talent retention issue at said company. This tool can also help detect what factors a company needs to consider 
-                                in order to address the problem. <br>
+                                Since company HR datasets are often not published to the general public, we see this tool being internally used by tech companies - who would train the
+                                model on their own private data. Once the model is trained, this tool can then help companies evaluate whether there exists a diversity talent retention 
+                                issue at their own company, along with what factors they may need to consider in order to address the problem. <br>
                                 <br>
                             </p>
                         </div>
