change labeling of result

--- a/biased.html
+++ b/biased.html
@@ -38,7 +38,7 @@
 
         <!-- Unbiased Title -->
         <div class="unbiased-text">
-            <h2>Let's train our Naive Bayes<br>model on a company HR dataset that is<br>more biased towards female employees.</h2>
+            <h2>Let's train our Naive Bayes model<br> on a company HR dataset that is slightly<br> more biased towards female employees.</h2>
             <h3>Choose your inputs:</h3>
         </div>
 
@@ -90,7 +90,7 @@
         </section>
 
         <div class="probability-result">
-            <h2 id="probability-result">Result: {probability}</h2>
+            <h2 id="probability-result">P({y_val}=1 | {x_vals}) <br> = {probability}</h2>
         </div>
 
         <script src="predictFactors.js"></script>
