--- a/unbiased.html
+++ b/unbiased.html
@@ -90,7 +90,7 @@
         </section>
 
         <div class="probability-result">
-            <h2 id="probability-result">Result: {probability}</h2>
+            <h2 id="probability-result">P({y_val}=1 | {x_vals}) <br> = {probability}</h2>
         </div>
 
         <script src="predictFactors.js"></script>
