testing page title text

--- a/biased.html
+++ b/biased.html
@@ -38,7 +38,11 @@
 
         <!-- Unbiased Title -->
         <div class="unbiased-text">
-            <h2>Let's train our Naive Bayes model<br> on a company HR dataset that is slightly<br> more biased towards female employees.</h2>
+            <h2>POV: You are HR at a tech company suspected to have a <u><b><i>more difficult time</i></b></u><br>retaining female employees versus male employees. Let's 
+                use this tool to<br>confirm/deny suspicions and figure out what factors impact retention. 
+            </h2>
+            <br>
+            <h2>Use the tool below to train our Naive Bayes model on the company's<br><u><b><i>(more biased)</i></b></u> HR dataset and test on various inputs.</h2>
             <h3>Choose your inputs:</h3>
         </div>
 
@@ -90,7 +94,7 @@
         </section>
 
         <div class="probability-result">
-            <h2 id="probability-result">P({y_val}=1 | {x_vals}) <br> = {probability}</h2>
+            <h2 id="probability-result"></h2>
         </div>
 
         <script src="predictFactors.js"></script>
