--- a/biased.html
+++ b/biased.html
@@ -94,7 +94,8 @@
         </section>
 
         <div class="probability-result">
-            <h2 id="probability-result"></h2>
+            <h2 id="probability-result-one"></h2>
+            <h2 id="probability-result-two"></h2>
         </div>
 
         <script src="predictFactors.js"></script>
