change colors / text

--- a/biased.html
+++ b/biased.html
@@ -94,8 +94,13 @@
         </section>
 
         <div class="probability-result">
+            <h2 id="probability-result-five"></h2>
+            <br>
             <h2 id="probability-result-one"></h2>
             <h2 id="probability-result-two"></h2>
+            <br>
+            <h2 id="probability-result-three"></h2>
+            <h2 id="probability-result-four"></h2>
         </div>
 
         <script src="predictFactors.js"></script>
