extra info page

--- a/extra.html
+++ b/extra.html
@@ -35,5 +35,16 @@
                 </nav>
             </div>
         </div> 
+
+        <!--================ PDF EMBED ================-->
+        <div class="title">
+            Click <a href="https://github.com/katherinevivianw/biasatbayes">here</a> to view the project's GitHub repository. 
+        </div>
+        <div class="title">
+            Project Writeup:
+        </div>
+        <div id="pdf-container">
+            <embed src="CS109_Project.pdf" type="application/pdf" width="60%" height="600px">
+        </div>
         
     </body>
