--- a/biased.html
+++ b/biased.html
@@ -26,7 +26,7 @@
                             <a class="nav-link" href="biased.html">Biased Example</a>
                         </li>
                         <!--<li class="nav-item">
-                            <a class="nav-link" href="generate.html">Generate Dataset</a>
+                            <a class="nav-link" href="upload.html">Upload Dataset</a>
                         </li>-->
                         <li class="nav-item">
                             <a class="nav-link" href="extra.html">Extra Info</a>
@@ -38,7 +38,7 @@
 
         <!-- Unbiased Title -->
         <div class="unbiased-text">
-            <h2>POV: You are HR at a tech company suspected to have a <u><b><i>more difficult time</i></b></u><br>retaining female employees versus male employees. Let's 
+            <h2>POV: You are HR at a tech company suspected to be having <u><b><i>more<br>difficulty</i></b></u> retaining female employees versus male employees. Let's 
                 use this tool to<br>confirm/deny suspicions and figure out what factors impact retention. 
             </h2>
             <br>
