--- a/extra.html
+++ b/extra.html
@@ -26,7 +26,7 @@
                             <a class="nav-link" href="biased.html">Biased Example</a>
                         </li>
                         <!--<li class="nav-item">
-                            <a class="nav-link" href="generate.html">Generate Dataset</a>
+                            <a class="nav-link" href="upload.html">Upload Dataset</a>
                         </li>-->
                         <li class="nav-item">
                             <a class="nav-link" href="extra.html">Extra Info</a>
@@ -46,5 +46,10 @@
         <div id="pdf-container">
             <embed src="CS109_Project.pdf" type="application/pdf" width="60%" height="600px">
         </div>
+
+        <div class="title">
+            'Upload Dataset' Proof of Concept:
+        </div>
+        <img src="uploadpoc.png" class="img">
         
     </body>
