--- a/index.html
+++ b/index.html
@@ -118,5 +118,9 @@
             </div>
         </section>
         
+        <!--================ FOOTER ================-->
+        <footer class="footer">
+            <p>website coded from scratch & with love by katherine wong.</p>       
+        </footer>
     </body>
 </html>
