--- a/extra.html
+++ b/extra.html
@@ -51,5 +51,10 @@
             'Upload Dataset' Proof of Concept:
         </div>
         <img src="uploadpoc.png" class="img">
+
+        <!--================ FOOTER ================-->
+        <footer class="footer">
+            <p>website coded from scratch & with love by katherine wong.</p>       
+        </footer>
         
     </body>
