--- a/unbiased.html
+++ b/unbiased.html
@@ -104,5 +104,10 @@
         </div>
 
         <script src="predictFactors.js"></script>
+
+        <!--================ FOOTER ================-->
+        <footer class="footer">
+            <p>website coded from scratch & with love by katherine wong.</p>       
+        </footer>
     </body>
 </html>
