--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         
         <!--================ FOOTER ================-->
         <footer class="footer">
-            <p>website coded from scratch & with love by katherine wong.</p>       
+            <p>website coded from scratch && with love by katherine wong.</p>       
         </footer>
     </body>
 </html>
