--- a/extra.html
+++ b/extra.html
@@ -54,7 +54,7 @@
 
         <!--================ FOOTER ================-->
         <footer class="footer">
-            <p>website coded from scratch & with love by katherine wong.</p>       
+            <p>website coded from scratch && with love by katherine wong.</p>       
         </footer>
         
     </body>
