--- a/unbiased.html
+++ b/unbiased.html
@@ -107,7 +107,7 @@
 
         <!--================ FOOTER ================-->
         <footer class="footer">
-            <p>website coded from scratch & with love by katherine wong.</p>       
+            <p>website coded from scratch && with love by katherine wong.</p>       
         </footer>
     </body>
 </html>
